fix(support): fixing merge overwrite (#475)
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Derek Roberts <derek.roberts@gmail.com>