@@ -1,23 +1,25 @@
 package ca.bc.gov.restapi.results.postgres.service;
 
+import ca.bc.gov.restapi.results.common.exception.OpeningNotFoundException;
 import ca.bc.gov.restapi.results.common.pagination.PaginatedResult;
 import ca.bc.gov.restapi.results.common.pagination.PaginationParameters;
 import ca.bc.gov.restapi.results.common.security.LoggedUserService;
 import ca.bc.gov.restapi.results.oracle.dto.OpeningSearchFiltersDto;
 import ca.bc.gov.restapi.results.oracle.dto.OpeningSearchResponseDto;
+import ca.bc.gov.restapi.results.oracle.repository.OpeningRepository;
 import ca.bc.gov.restapi.results.oracle.service.OpeningService;
 import ca.bc.gov.restapi.results.postgres.dto.UserRecentOpeningDto;
 import ca.bc.gov.restapi.results.postgres.entity.UserRecentOpeningEntity;
 import ca.bc.gov.restapi.results.postgres.repository.UserRecentOpeningRepository;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-
+import jakarta.transaction.Transactional;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.Map;
 import java.util.stream.Collectors;
-
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -31,37 +33,40 @@ public class UserRecentOpeningService {
     private final LoggedUserService loggedUserService;
     private final UserRecentOpeningRepository userRecentOpeningRepository;
     private final OpeningService openingService;
+    private final OpeningRepository openingRepository;
 
-    /**
-     * Stores the opening viewed by the user and returns the DTO.
-     *
-     * @param openingId The ID of the opening viewed by the user.
-     * @return A DTO with userId, openingId, and lastViewed timestamp.
-     */
-    public UserRecentOpeningDto storeViewedOpening(String openingId) {
-        String userId = loggedUserService.getLoggedUserId();
-        LocalDateTime lastViewed = LocalDateTime.now();
-        
-        // Verify that the openingId String contains numbers only and no spaces
-        if (!openingId.matches("^[0-9]*$")) {
+    @Transactional
+    public UserRecentOpeningDto storeViewedOpening(Long openingId) {
+        log.info("Adding opening ID {} as recently viewed for user {}", openingId,
+            loggedUserService.getLoggedUserId());
+
+        if(openingId == null) {
+            log.info("Opening ID is null");
             throw new IllegalArgumentException("Opening ID must contain numbers only!");
         }
 
-        // Check if the user has already viewed this opening
-        UserRecentOpeningEntity existingEntity = userRecentOpeningRepository.findByUserIdAndOpeningId(userId, openingId);
-        
-        if (existingEntity != null) {
-            // Update the last viewed timestamp for the existing record
-            existingEntity.setLastViewed(lastViewed);
-            userRecentOpeningRepository.save(existingEntity);  // Save the updated entity
-        } else {
-            // Create a new entity if this openingId is being viewed for the first time
-            UserRecentOpeningEntity newEntity = new UserRecentOpeningEntity(null, userId, openingId, lastViewed);
-            userRecentOpeningRepository.save(newEntity);  // Save the new entity
+        if (!openingRepository.existsById(openingId)) {
+            log.info("Opening ID not found: {}", openingId);
+            throw new OpeningNotFoundException();
         }
+
+        LocalDateTime lastViewed = LocalDateTime.now();
+
+        userRecentOpeningRepository.saveAndFlush(
+        userRecentOpeningRepository
+            .findByUserIdAndOpeningId(loggedUserService.getLoggedUserId(), openingId)
+            .map(entity -> entity.withLastViewed(lastViewed))
+            .orElse(
+                new UserRecentOpeningEntity(null,loggedUserService.getLoggedUserId(),openingId,lastViewed)
+            )
+        );
     
         // Return the DTO
-        return new UserRecentOpeningDto(userId, openingId, lastViewed);
+        return new UserRecentOpeningDto(
+            loggedUserService.getLoggedUserId(),
+            openingId,
+            lastViewed
+        );
     }
 
     /**
@@ -79,29 +84,33 @@ public class UserRecentOpeningService {
                 .findByUserIdOrderByLastViewedDesc(userId, pageable);
     
         // Extract opening IDs as String
-        Map<String,LocalDateTime> openingIds = recentOpenings.getContent().stream()
+        Map<Long, LocalDateTime> openingIds = recentOpenings.getContent().stream()
                 .collect(Collectors.toMap(UserRecentOpeningEntity::getOpeningId, UserRecentOpeningEntity::getLastViewed));
-        log.info("User with the userId {} has the following openindIds {}", userId, openingIds);
+        log.info("User with the userId {} has the following openingIds {}", userId, openingIds);
+    
         if (openingIds.isEmpty()) {
-            return new PaginatedResult<>();
+            // Ensure an empty data list instead of null
+            return new PaginatedResult<OpeningSearchResponseDto>()
+                    .withData(Collections.emptyList());
         }
-
+    
         PaginatedResult<OpeningSearchResponseDto> pageResult =
             openingService
                 .openingSearch(
                     new OpeningSearchFiltersDto(new ArrayList<>(openingIds.keySet())),
                     new PaginationParameters(0, 10)
                 );
-
+    
         return pageResult
             .withData(
                 pageResult
                     .getData()
                     .stream()
-                    .peek(result -> result.setLastViewDate(openingIds.get(result.getOpeningId().toString())))
+                    .map(result -> result.withLastViewDate(openingIds.get(result.getOpeningId().longValue())))
                     .sorted(Comparator.comparing(OpeningSearchResponseDto::getLastViewDate).reversed())
-                    .collect(Collectors.toList())
+                    .toList()
             );
     }
+    
     
 }
